Issue #111: add studygroup and start-datetime to returned data
